# kidquest

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CREDITS.md  LICENSE  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
client/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
client/src/: main.ts
client/src/api/: client.test.ts  client.ts
client/src/engine/: contract.test.ts  contract.ts
client/src/engine/combat/: TurnQueue.ts  (+4 more)
client/src/scenes/: BootScene.ts  CombatScene.ts  DialogueScene.ts  OverworldScene.ts  PuzzleScene.ts
client/src/view/: tileColors.test.ts  tileColors.ts
content/: pyproject.toml
content/index/: _TEMPLATE.yaml  arturo.yaml  astrid.yaml  sergio.yaml
content/kidquest_content/: __init__.py  challenges.py  comfy_driver.py  curricula.py  from_index.py  llm_client.py  medals.py  orchestrator.py  prompt_builder.py  publisher.py  safety.py  scenario_patcher.py  schema_validator.py  tts_piper.py
content/tests/: conftest.py  test_challenges.py  test_comfy_driver.py  test_from_index.py  test_generation_smoke.py  test_llm_client.py  test_orchestrator.py  test_prompt_builder.py  test_publisher.py  test_safety.py  test_scenario_patcher.py  test_schema_validator.py  test_text_safety.py  test_tts_piper.py
curricula/profiles/: adult_artificer.yaml  child_6yo.yaml  youth_10yo.yaml
deploy/: Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  nginx.conf
deploy/lxc/: ct110.md
fh2m/: FORMAT.md  pyproject.toml
fh2m/kidquest_fh2m/: __init__.py  body.py  container.py  header.py  stream.py
fh2m/tests/: test_body.py  test_container.py  test_header.py
fh2m/tests/fixtures/: kk.fh2m
scripts/: codegen.sh
server/: pyproject.toml
server/kidquest_server/: __init__.py  app.py  config.py  content.py
server/kidquest_server/api/: __init__.py  routes.py
server/kidquest_server/director/: __init__.py  rules.py
server/kidquest_server/profile/: __init__.py  store.py
server/tests/: test_content_api.py  test_contract.py  test_director_parity.py  test_profile.py
shared/fixtures/director/: cases.json
shared/fixtures/levels/: minimal.json
shared/fixtures/profiles/: generic_adult.json  generic_child.json  generic_youth.json
shared/py/: challenge_set_schema.py  curriculum_schema.py  daily_level_schema.py  player_profile_schema.py
shared/schemas/: challenge_set.schema.json  curriculum.schema.json  daily_level.schema.json  player_profile.schema.json
shared/ts/: challenge_set.schema.d.ts  curriculum.schema.d.ts  daily_level.schema.d.ts  player_profile.schema.d.ts
tests/: validate_repo.py
(+22 files in other folders)
