[project]
name = "kidquest-content"
version = "0.0.0"
description = "KidQuest content generation pipeline (LLM orchestrator, TTS, sprite generation)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "requests>=2.32",
    "pyyaml>=6.0",
    "jsonschema>=4.23",
    "kidquest-fh2m",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kidquest_content"]
