[project]
name = "kidquest-server"
version = "0.0.0"
description = "KidQuest FastAPI server: profile store, game director, content serving"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kidquest_server"]
